--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
     "typescript": "^3.4.4"
   },
   "scripts": {
