removed checkout workflow

--- a/.github/workflows/github-pages-workflow.yml
+++ b/.github/workflows/github-pages-workflow.yml
@@ -19,16 +19,6 @@ jobs:
         node-version: [10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        CI: true
     - name: GitHub Pages
       uses: crazy-max/ghaction-github-pages@v1.3.0
       with:
@@ -43,3 +33,6 @@ jobs:
         committer_name: Neil James Monzales
         # Commit author's email
         committer_email: neiljames97@gmail.com
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
