--- a/.github/workflows/github-pages-workflow.yml
+++ b/.github/workflows/github-pages-workflow.yml
@@ -19,6 +19,9 @@ jobs:
         node-version: [10.x, 12.x]
 
     steps:
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
     - name: GitHub Pages
       uses: crazy-max/ghaction-github-pages@v1.3.0
       with:
